# oneAPI

./: .gitignore  README.md  conceitos.md  notes.txt
Base/: Dtree.ipynb  teste.cpp  teste.ipynb
Codigo/: notes.txt
Codigo/cpu+gpu/: incrementoS.cpp
Codigo/cpu+gpu/output/: incrementoS
Codigo/device/: a.out  prog1.dp.cpp
Codigo/inicio/: a.out  maiin.cpp
Codigo/soma/: soma.dp.cpp
Codigo/vectoradd/: soma  soma.cpp
codigos/: inf-compilacao.txt  inf_compilacao.md
codigos/Km/: km.cpp
codigos/adicao-simples/: a  main.cpp
codigos/bidemensional/: main.cpp
codigos/calculadora/: a
codigos/calculadora_cpu/: calc.cpp
codigos/cnn/: bp.cpp
codigos/cnn/BP/: Makefile  back.py  backprop  in
codigos/cnn/cnn-oneapi/: cnn.ipynb  preprocess.py
codigos/cnn/cnn-oneapi/cnn_onxx/: CMakeLists.txt  modelo_intrusao.onnx
codigos/cnn/oneDNN/: engine.cpp
codigos/cnn/perceptron/: pcp  pcp_cpppuro_double.cpp
codigos/cpu+gpu/: main.cpp  test
codigos/device/: luiz  luiz.cpp
codigos/hello/: ana.c  main.cpp
codigos/hello/output/: ana
codigos/kmeans/: kmeans.cpp  kmeans2.cpp  main.cpp  p  vetorizado
codigos/kmeans-nsl/: kmeans_sequencial.cpp  set
codigos/kmeans-nsl/saidas/: diff.cpp  resultado_esperado.txt
codigos/kmeans/output/: dif  kmeans2
codigos/matriz-mult/: a  main1.cpp  tes.cpp
codigos/primeiro_programa/: main.cpp
codigos/queue/: queue.cpp
codigos/sampleCmake/: notes.txt
codigos/ula/: base.cpp  main.cpp  main2.cpp
codigos/vector_add/: main.cpp
codigos/vectoradd/: luiz
nsl/Base/: TratBase2.ipynb
outra base/: kmeans_funcional_7l.cpp
(+31 files in other folders)
